# CAN_Library

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  debug.sh  test.sh
arduino_test/: arduino_test.ino  arduino_test.sh
arduino_test/CAN/: canFloat.h
docs/: CanFloats.md  SensorFunctions.md  arduino.md  bms.md  mcu.md  mppt.md  python.md
include/: canFloat.h
python_bindings/: PyCANLibrary.cpp  mppt_bindings.cpp
src/: bms.cpp  bms.h  mcu.cpp  mcu.h  mppt.cpp  mppt.h  sensorFunctions.cpp  sensorFunctions.h
tests/: bms_test.hpp  lv_sensors_test.hpp  mcu_test.hpp  mppt_test.hpp  python_test.py  test_main.cpp
